crates/trawl-cli/tests/snapshots/doctor__doctor_json_contract_pass.snap
---
source: crates/trawl-cli/tests/doctor.rs
expression: "normalize(&stub, &output.stdout)"
---
{
  "version": 1,
  "vantage": "client",
  "target": {
    "origin": "https://127.0.0.1:PORT",
    "source": "CLI profile `prod` in ~/.config/trawl/config.toml"
  },
  "verdict": "pass",
  "checks": [
    {
      "id": "connection.config",
      "outcome": "complete",
      "reason": null,
      "detail": "trust: pinned CA from ca_cert in [profiles.prod]; key: token in [profiles.prod]",
      "source": "CLI profile `prod` in ~/.config/trawl/config.toml",
      "blocked_by": null,
      "next_action": null
    },
    {
      "id": "api.transport",
      "outcome": "complete",
      "reason": null,
      "detail": null,
      "source": null,
      "blocked_by": null,
      "next_action": null
    },
    {
      "id": "api.tls",
      "outcome": "complete",
      "reason": null,
      "detail": "verified under the pinned CA",
      "source": null,
      "blocked_by": null,
      "next_action": null
    },
    {
      "id": "api.health",
      "outcome": "complete",
      "reason": null,
      "detail": "status: ok; server version CLI_VERSION",
      "source": null,
      "blocked_by": null,
      "next_action": null
    },
    {
      "id": "api.health.duckdb",
      "outcome": "complete",
      "reason": null,
      "detail": "reported ok",
      "source": null,
      "blocked_by": null,
      "next_action": null
    },
    {
      "id": "api.health.ingest_capacity",
      "outcome": "complete",
      "reason": null,
      "detail": "reported ok",
      "source": null,
      "blocked_by": null,
      "next_action": null
    },
    {
      "id": "api.identity",
      "outcome": "complete",
      "reason": null,
      "detail": "name: ops-key; kind: human; permissions: query",
      "source": "token in [profiles.prod]",
      "blocked_by": null,
      "next_action": null
    }
  ],
  "notes": [
    "ingest_capacity reports ok, but this key lacks the ingest permission, so it cannot send events"
  ]
}
